CJ4: Fix bugs on PFD/MFD map (#754)
* fix wpts not visible after cancel mod

* remove some logs

* fix pfd menu ranges

* fix exception in getallwaypoints

* remove some not needed map elements

* apply correct overlay scaling to ppos in mfd too

* mfd wind speed font size same as pfd

* fix outer range display cut off

--- a/src/workingtitle-vcockpits-instruments-cj4/html_ui/Pages/VCockpit/Instruments/Airliners/CJ4/MFD/CJ4_MFD.css
+++ b/src/workingtitle-vcockpits-instruments-cj4/html_ui/Pages/VCockpit/Instruments/Airliners/CJ4/MFD/CJ4_MFD.css
@@ -404,7 +404,7 @@ cj4-mfd-element #Mainframe #Electricity #MainDisplay #SystemInfos2 .SystemFMS .c
               font-size: 26px;
               fill: green; }
             cj4-mfd-element #Mainframe #Electricity #MainDisplay #MapOverlay #NDInfo #TopBox text.Wind {
-              font-size: 18px;
+              font-size: 20px;
               fill: magenta;
               text-anchor: end; }
           cj4-mfd-element #Mainframe #MapOverlay #NDInfo #VORDMENavaids svg {
